# cdfy

./: .gitignore  .tool-versions  Cargo.toml  Justfile  README.md  docker-compose.yaml
.github/workflows/: docs.yml  test.yml
cdfy/: .gitignore  README.md  api.rest  mix.exs
cdfy-cli/: Cargo.toml
cdfy-cli/src/: main.rs
cdfy-cli/src/api/: mod.rs  plugin.rs
cdfy-plugin-cli/: Cargo.toml
cdfy-plugin-cli/src/: main.rs
cdfy/assets/: tailwind.config.js
cdfy/config/: config.exs  dev.exs  prod.exs  runtime.exs  test.exs
cdfy/lib/: cdfy.ex  cdfy_web.ex
cdfy/lib/cdfy/: accounts.ex  application.ex  event.ex  mailer.ex  plugin.ex  plugin_file.ex  plugin_runner.ex  plugins.ex  repo.ex  room.ex  room_server.ex  room_state.ex  storage.ex
cdfy/lib/cdfy/accounts/: user.ex  user_notifier.ex  user_token.ex
cdfy/lib/cdfy/model/: plugin.ex
cdfy/lib/cdfy/plugin/: caller.ex  plugin.ex  plugin_server.ex  plugin_supervisor.ex  state.ex
cdfy/lib/cdfy/repo/: plugins.ex
cdfy/lib/cdfy/room/: room.ex  room_server.ex  room_supervisor.ex
cdfy/lib/cdfy_web/: endpoint.ex  gettext.ex  router.ex  telemetry.ex  user_auth.ex
cdfy/lib/cdfy_web/components/: core_components.ex  layouts.ex
cdfy/lib/cdfy_web/controllers/: changeset_json.ex  error_html.ex  error_json.ex  fallback_controller.ex  plugin_controller.ex  plugin_html.ex  user_session_controller.ex
cdfy/lib/cdfy_web/live/: home_live.ex  plugin_live.ex  plugins_live.ex  room_live.ex  user_confirmation_instructions_live.ex  user_confirmation_live.ex  user_login_live.ex  (+4 more)
cdfy/priv/repo/: seeds.exs
cdfy/test/: test_helper.exs
cdfy/test/cdfy/: accounts_test.exs
cdfy/test/cdfy_room_server/: plugins_test.exs
cdfy/test/cdfy_web/: user_auth_test.exs
cdfy/test/support/: conn_case.ex  data_case.ex
cdfy_room_server/: .gitignore  README.md  mix.exs
cdfy_room_server/assets/: tailwind.config.js
cdfy_room_server/config/: config.exs  dev.exs  prod.exs  runtime.exs  test.exs
cdfy_room_server/lib/: cdfy_room_server.ex  cdfy_room_server_web.ex
cdfy_room_server/lib/cdfy_room_server/: application.ex  mailer.ex  plugin.ex  plugin_runner.ex  plugins.ex  repo.ex  room.ex
cdfy_room_server/lib/cdfy_room_server_web/: endpoint.ex  gettext.ex  router.ex  telemetry.ex
cdfy_room_server/priv/repo/: seeds.exs
cdfy_room_server/test/: test_helper.exs
cdfy_room_server/test/cdfy_room_server/: plugins_test.exs
cdfy_room_server/test/support/: conn_case.ex  data_case.ex
cdfy_template_plugin/: Cargo.toml  README.md
cdfy_template_plugin/src/: game.rs  lib.rs  plugin.rs
cdfy_template_plugin/src/templates/: app.html
client/: index.html  package-lock.json  package.json  vite.config.ts
client/src/: App.tsx  socket.ts  state.ts
client/src/component/: Button.tsx  CardView.tsx  Debug.tsx  DeckView.tsx  Players.tsx
client/src/plugins/: Card.tsx  CareerPoker.tsx  Counter.tsx  Deck.tsx
crates/career-poker/: Cargo.toml
crates/career-poker/src/: card.rs  deck.rs  effect.rs  game.rs  lib.rs  main.rs  state.rs
crates/career-poker/src/effects/: cards.rs  mod.rs
crates/cdfy-binding-gen/: Cargo.toml
crates/cdfy-binding-gen/src/: main.rs  types.rs
crates/cdfy-client-sdk/: Cargo.toml
crates/cdfy-client-sdk/src/: lib.rs
crates/cdfy-plugin-cli/: .env
crates/cdfy-runtime/: Cargo.toml
crates/cdfy-runtime/examples/: counter.rs
crates/cdfy-runtime/src/spec/: bindings.rs  mod.rs  types.rs
crates/cdfy-sdk/: Cargo.toml
crates/cdfy-sdk-core/: Cargo.toml
crates/cdfy-sdk-core/src/: lib.rs
crates/cdfy-sdk-support/: Cargo.toml
crates/cdfy-sdk-support/src/: builtin.rs  lib.rs
crates/cdfy-sdk/src/: export.rs  import.rs  types.rs
crates/cdfy-server/: Cargo.toml  client.http
crates/cdfy-server-sdk/: Cargo.toml
crates/cdfy-server-sdk-mock/: Cargo.toml
crates/cdfy-server-sdk-mock/src/: lib.rs
crates/cdfy-server-sdk/src/: export.rs  import.rs
crates/cdfy-server/src/: main.rs  room_api.rs
crates/cdfy-server/src/plugin/: mod.rs  runner.rs
crates/cdfy-server/src/room/: broascast.rs  mod.rs
crates/cdfy-websocket-server/: Cargo.toml  client.http
crates/cdfy-websocket-server/src/: main.rs  room.rs  room_api.rs  runner.rs
crates/counter/: Cargo.toml
crates/counter/src/: lib.rs  mock.rs
crates/example-plugin/: Cargo.toml
crates/example-plugin/src/: lib.rs
crates/example-protocol/: Cargo.toml
crates/example-protocol/src/: main.rs
crates/playing-card/: Cargo.toml
crates/playing-card/src/: card.rs
crates/plugin-bindings/: Cargo.toml
crates/plugin-bindings/src/: export.rs
crates/runtime/: Cargo.toml  types.rs
crates/runtime/src/: main.rs
docs/: plugin.md
plugins/career-poker/: Cargo.toml
plugins/career-poker/src/: effect.rs  lib.rs  mock.rs  state.rs
plugins/career_poker/: Cargo.toml
plugins/career_poker/src/: lib.rs  state.rs
plugins/career_poker_client_react/: .gitignore  package-lock.json  package.json
plugins/career_poker_client_react/src/: App.tsx  api.ts  main.tsx  useRoom.ts
plugins/counter/: Cargo.toml
plugins/counter-client-yew/: Cargo.toml  Justfile
plugins/counter-client-yew/src/: main.rs
plugins/counter-server/: Cargo.toml
plugins/counter-server/src/: game.rs  lib.rs
plugins/counter-view/: Cargo.toml  index.html
plugins/counter-view/src/: api.rs  main.rs
plugins/counter/src/: game.rs  lib.rs  mock.rs
plugins/template/: Cargo.toml
plugins/template/src/: lib.rs
server/: .gitignore  Justfile  client.ts  deno.json  plugin.ts  redis.ts  room.ts  server.ts  socket.ts  supabase.ts  util.ts
server/examples/: supabase.ts
server/src/: cli.ts  deps.ts  redis.ts  rooms.ts  server.ts  socket.ts  supabase.ts  task.ts
server/src/plugin/: meta.ts  registry.ts  runtime.ts  wasmStorage.ts
server/src/registrar/: PluginMetaRepository.ts  PluginRegistrarService.ts  types.ts  wasmStorage.ts
server/src/runtime/: redis.ts  runtime.ts  task.ts
src/: all_roles_career_poker.rs  card.rs  deck.rs  main.rs
src/career_poker/: game.rs  mod.rs
src/career_poker/effects/: cards.rs  mod.rs
supabase/: config.toml
(+58 files in other folders)
