[package]
name = "career-poker"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1"
# rand = { version = "0.6.5", features = ["wasm-bindgen"] }
cdfy-sdk = { path = "../cdfy-sdk" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.93"

[dev-dependencies]
inquire = "0.5.3"