[package]
name = "cdfy-client-sdk"
version = "0.1.0"
edition = "2021"

[dependencies]
cdfy-sdk-core = { path = "../cdfy-sdk-core" }
anyhow = "1"
web-sys = { version = "0.3", features = [
    "Headers",
    "Request",
    "RequestInit",
    "RequestMode",
    "Response",
    "Window",
] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.4"
serde_json = "1.0"
gloo = "0.8"
