[package]
name = "cdfy-runtime"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
rand = "0.8.5"
wasmer = { version = "2.3", features = ["compiler", "cranelift", "singlepass"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.93"
fp-bindgen-support = { version = "3.0.0", features = ["async", "wasmer2_host"] }
