[package]
name = "cdfy-sdk-support"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
cdfy-sdk = { path = "../../crates/cdfy-sdk" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.93"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rand = "0.8.5"