[package]
name = "cdfy-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cdfy-sdk-core = { path = "../cdfy-sdk-core" }
cdfy-runtime = { path = "../cdfy-runtime" }
axum = { version = "0.6.20", features = ["ws"] }
futures = "0.3"
tokio = { version = "1", features = ["full"] }
tower = { version = "0.4", features = ["util"] }
tracing = "0.1"
tracing-subscriber = { version = "0.2", features = ["env-filter"] }
tower-http = { version = "0.3.4", features = ["full"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
redis = "0.23.2"
