[package]
name = "runtime"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasmer = { version = "2.2", default-features = false, features = ["sys"] }
wasmer-engine-universal = {version = "2.1", features = ["compiler"]}
serde = {version = "1.0"}
reqwest = { version = "*", features = ["blocking"] }
wasmer-compiler-singlepass = "3.1.1"
wasmer-compiler-cranelift = "3.1.1"
fp-bindgen-support = { version = "2.0.0", features = ["host", "async"] }