[package]
name = "career-poker"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[profile.release]
opt-level = 's'
lto = true

[dependencies]
anyhow = "1"
cdfy-sdk = { path = "../../crates/cdfy-sdk" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.93"
# rand = "0.8.5"

[dev-dependencies]
inquire = "0.5.3"