[package]
name = "counter-client"
version = "0.1.0"
edition = "2021"

[dependencies]
web-sys = { version = "0.3", features = [
    "Headers",
    "Request",
    "RequestInit",
    "RequestMode",
    "Response",
    "Window",
] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.4"
serde_json = "1.0"
gloo = "0.8"
yew = { version = "0.20.0", features = ["csr"] }
counter-server = { path = "../counter-server" }
cdfy-client-sdk = { path = "../../crates/cdfy-client-sdk" }
