[package]
name = "counter-server"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[profile.release]
opt-level = 's'
lto = true

[dependencies]
anyhow = "1"
cdfy-sdk-core = { path = "../../crates/cdfy-sdk-core" }
cdfy-server-sdk = { path = "../../crates/cdfy-server-sdk" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.93"
