[package]
name = "counter-view"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
web-sys = { version = "0.3", features = ["Headers", "Request", "RequestInit", "RequestMode", "Response", "Window"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.4"
serde_json = "1.0"
gloo = "0.8"
yew = { version = "0.20.0", features = ["csr"] }
counter = { path = "../counter" }
cdfy-sdk-support = { path = "../../crates/cdfy-sdk-support" }